Jumping text bug fixed. new bug added

--- a/Public/CSS/style.css
+++ b/Public/CSS/style.css
@@ -187,11 +187,12 @@ ul#ul-class-navigation li {
 }
 .CenterPriceLeft {
     position: absolute;
-    height: 100%;
+    height: 60%;
     right: 0;
     width: 200px;
 }
 .CenterPriceLeftChild {
+    padding-top: 10px;
     position: relative;
     top: 40%;
     -ms-transform: translateY(-50%);
@@ -206,6 +207,7 @@ ul#ul-class-navigation li {
     border: 1px solid;
     font-family: pt-sans, sans-serif;
     font-size: 20px;
+    right: 325px;
 }
 #StockItemSpecifications {
     background-color: rgba(35, 40, 47, 0.8);
